--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <header class="navbar">
   <div class="container nav-inner">
     <div class="brand">
-      <img src="logo-placeholder.svg" alt="Logo Sen Wantère" class="logo">
+      <img src="assets/img/logo_senwantere.svg" alt="Logo Sen Wantère" class="logo">
       <span class="brand-name">Sen Wantère</span>
       <span class="tagline">Magasin discount</span>
     </div>
@@ -50,7 +50,9 @@
         <div class="card-head">Deal du jour</div>
         <div class="card-body">
           <div class="product">
-            <div class="product-img placeholder"></div>
+            <img class="product-img"
+               src="assets/img/Mixeur_Kitchen_Pro_500W_1.jpeg"
+               alt="Mixeur Kitchen Pro 500W" width="320" height="240">
             <div class="product-info">
               <h3>Mixeur KitchenPro 500W</h3>
               <div class="prices"><span class="price">12 500 CFA</span> <span class="was">au lieu de 29 900 CFA</span></div>
