--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <div class="card-body">
           <div class="product">
             <img class="product-img"
-               src="assets/img/Mixeur_Kitchen_Pro_500W_1.jpeg"
-               alt="Mixeur Kitchen Pro 500W" width="320" height="240">
+                 src="assets/img/Mixeur_Kitchen_Pro_500W_1.jpeg"
+                 alt="Mixeur Kitchen Pro 500W" width="320" height="240">
             <div class="product-info">
               <h3>Mixeur KitchenPro 500W</h3>
               <div class="prices"><span class="price">12 500 CFA</span> <span class="was">au lieu de 29 900 CFA</span></div>
@@ -72,19 +72,27 @@
     <h2>Arrivages récents</h2>
     <div class="grid">
       <article class="tile">
-        <div class="ph-img"></div>
+        <img class="product-image"
+             src="assets/img/robot_patissier_1.jpeg"
+             alt="Robot pâtissier 5L" width="320" height="240">
         <h3>Robot pâtissier</h3>
         <div class="prices"><span class="price">39 000 CFA</span><span class="was">79 000 CFA</span></div>
         <a class="btn btn-outline" href="https://wa.me/221000000000?text=Je%20veux%20le%20robot%20p%C3%A2tissier" target="_blank" rel="noopener">Réserver</a>
       </article>
+
       <article class="tile">
-        <div class="ph-img"></div>
+        <img class="product-image"
+             src="assets/img/coffret_jouet_1.jpeg"
+             alt="Coffret jouet" width="320" height="240">
         <h3>Coffret jouets</h3>
         <div class="prices"><span class="price">7 500 CFA</span><span class="was">15 900 CFA</span></div>
         <a class="btn btn-outline" href="https://wa.me/221000000000?text=Je%20veux%20le%20coffret%20jouets" target="_blank" rel="noopener">Réserver</a>
       </article>
+
       <article class="tile">
-        <div class="ph-img"></div>
+        <img class="product-image"
+             src="assets/img/plaid_et_coussin.jpeg"
+             alt="Plaids et coussins" width="320" height="240">
         <h3>Plaids & coussins</h3>
         <div class="prices"><span class="price">4 900 CFA</span><span class="was">9 900 CFA</span></div>
         <a class="btn btn-outline" href="https://wa.me/221000000000?text=Je%20veux%20les%20plaids%20et%20coussins" target="_blank" rel="noopener">Réserver</a>
