--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sen Wantère — Magasin discount</title>
-<meta name="description" content="Sen Wantère : invendus & surstocks de France, vendus à prix cassés au Sénégal. Nouveaux arrivages, stock limité.">
+<meta name="description" content="Sen Wantère : invendus & surstocks du monde, vendus à prix cassés au Sénégal. Nouveaux arrivages, stock limité.">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&family=Inter:wght@400;600&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
 <section class="hero">
   <div class="container hero-inner">
     <div class="hero-copy">
-      <h1>Les bonnes affaires de France, <span class="accent">au Sénégal</span>.</h1>
+      <h1>Produits de choix, <span class="accent">prix accessibles à tous.</span>.</h1>
       <p class="lead">Invendus • Surstocks • Retours marchandises — <strong>jusqu’à –70%</strong>.<br>Stock limité, nouveaux arrivages chaque semaine.</p>
       <div class="cta-row">
         <a class="btn btn-primary" href="https://wa.me/221771009984?text=Bonjour%20Sen%20Want%C3%A8re%2C%20je%20veux%20r%C3%A9server%20un%20article" target="_blank" rel="noopener">Commander sur WhatsApp</a>
