--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
   <div class="container foot-grid">
     <div>
       <h3>Sen Wantère</h3>
-      <p>Les bonnes affaires de France, au Sénégal.</p>
+      <p>Produits de choix, prix accessibles à tous.</p>
       <a class="btn btn-wa" href="https://wa.me/221000000000?text=Bonjour%20Sen%20Want%C3%A8re" target="_blank" rel="noopener">WhatsApp</a>
     </div>
     <div>
