--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="btn btn-secondary" href="#arrivages">Voir les arrivages</a>
       </div>
       <ul class="trust">
-        <li>✔️ Prix cassés</li><li>✔️ Transparence sur l’état</li><li>✔️ Retrait en magasin à Dakar</li>
+        <li>✔️ Prix cassés</li><li>✔️ Transparence sur l’état</li><li>✔️ Retrait en magasin à Mbour</li>
       </ul>
     </div>
 
@@ -121,7 +121,7 @@
     <h2>Comment ça marche</h2>
     <ol class="steps">
       <li><strong>Collecte en France</strong> d’invendus, retours, fins de séries.</li>
-      <li><strong>Expédition</strong> par conteneur jusqu’à Dakar.</li>
+      <li><strong>Expédition</strong> par conteneur jusqu’à Mbour.</li>
       <li><strong>Mise en rayon</strong> + publication sur nos réseaux.</li>
       <li><strong>Commande</strong> par WhatsApp et retrait en magasin.</li>
     </ol>
@@ -156,7 +156,7 @@
     </details>
     <details>
       <summary>Adresse & horaires</summary>
-      <p>📍 Dakar — [Votre adresse]<br>🕘 Lun–Sam : 9h–20h</p>
+      <p>📍 Mbour — Santhiaba<br>🕘 Lun–Sam : 9h–20h</p>
     </details>
   </div>
 </section>
